--- a/css/js.css
+++ b/css/js.css
@@ -82,23 +82,38 @@
 }
 
 /*左から右に流れるスタイル　背景色ブラック*/
-.js-price {
+.js-price, .js-price2 {
   -webkit-animation-name: js-priceBack;
           animation-name: js-priceBack;
   -webkit-animation-duration: 1s;
           animation-duration: 1s;
   -webkit-animation-fill-mode: forwards;
           animation-fill-mode: forwards;
+  display: block;
   position: absolute;
   top: 0;
   left: 0;
-  display: block;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.88);
+  background-color: black;
+  mix-blend-mode: multiply;
   content: "";
 }
 
+.js-price {
+  padding: 5.3vw 12.8vw;
+}
+
+.js-price2 {
+  padding: 6.3vw 30.8vw;
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .js-price {
+    padding: 5.3vw 12.8vw;
+  }
+  .js-price2 {
+    padding: 6.3vw 30.8vw;
+  }
+}
 @-webkit-keyframes js-priceBack {
   0% {
     transform-origin: left;
@@ -109,7 +124,6 @@
     transform: scaleX(1);
   }
 }
-
 @keyframes js-priceBack {
   0% {
     transform-origin: left;
@@ -191,7 +205,7 @@
   }
 }
 /*下から上に流れるスタイル　背景色イエロー*/
-.js-material {
+.js-material, .js-material2 {
   position: absolute;
   top: 0;
   left: 0;
@@ -208,6 +222,18 @@
           animation-fill-mode: forwards;
 }
 
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .js-material {
+    width: 3vw;
+    height: 49vw;
+    padding: 0 8.8vw;
+  }
+  .js-material2 {
+    width: 11vw;
+    height: 29vw;
+    padding: 5.3vw 3.8vw;
+  }
+}
 @-webkit-keyframes js-materialBack {
   0% {
     transform-origin: bottom;
@@ -218,7 +244,6 @@
     transform: scaleY(1);
   }
 }
-
 @keyframes js-materialBack {
   0% {
     transform-origin: bottom;
