--- a/css/js.css
+++ b/css/js.css
@@ -4,7 +4,7 @@
   opacity: 0;
   visibility: hidden;
   transition: 1s;
-  transform: translate(0, 1rem);
+  transform: translateY(50%);
 }
 
 ._scrollSlideUp {
@@ -14,7 +14,8 @@
   transform: translate(0, 8rem);
 }
 
-._scrollSlideSaku, ._scrollSlideFuwa {
+._scrollSlideSaku,
+._scrollSlideFuwa {
   opacity: 0;
   visibility: hidden;
   transition: 2s;
@@ -26,21 +27,21 @@
   opacity: 0;
   visibility: hidden;
   transition: 0.8s;
-  transform: translateY(-10%);
+  transform: translateY(-20%);
 }
 
 ._scrollBothSlideDownSec {
   opacity: 0;
   visibility: hidden;
   transition: 2s;
-  transform: translateY(-10%);
+  transform: translateY(-20%);
 }
 
 ._scrollBothSlideDownThr {
   opacity: 0;
   visibility: hidden;
   transition: 4s;
-  transform: translateY(-10%);
+  transform: translateY(-20%);
 }
 
 /*　スクロールイベントが実装されたら付与されるクラス */
@@ -70,23 +71,25 @@
   transform: translateY(0);
 }
 
-/*中の要素*/
-.js-slideText {
-  -webkit-animation-duration: 0.8s;
-          animation-duration: 0.8s;
-  -webkit-animation-fill-mode: forwards;
-          animation-fill-mode: forwards;
-  color: #fff;
-  -webkit-clip-path: inset(0 100% 0 0);
-  clip-path: inset(0 100% 0 0);
+._linkSlideLeft {
+  opacity: 0;
+  visibility: hidden;
+  transition: 1s;
+  transform: translateX(-20%);
+}
+
+.js-linkSlideLeft {
+  opacity: 1;
+  visibility: visible;
+  transform: translateX(0);
 }
 
 /*左から右に流れるスタイル　背景色ブラック*/
 .js-price, .js-price2 {
   -webkit-animation-name: js-priceBack;
           animation-name: js-priceBack;
-  -webkit-animation-duration: 1s;
-          animation-duration: 1s;
+  -webkit-animation-duration: 3.5s;
+          animation-duration: 3.5s;
   -webkit-animation-fill-mode: forwards;
           animation-fill-mode: forwards;
   display: block;
@@ -136,6 +139,45 @@
 }
 /*左から右に流れるスタイル　背景色イエロー*/
 .js-passion {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
+  width: 100%;
+  height: 100%;
+  background-color: gold;
+  content: "";
+  -webkit-animation-name: js-passionBackYellow;
+          animation-name: js-passionBackYellow;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+  -webkit-animation-duration: 0.8s;
+          animation-duration: 0.8s;
+  opacity: 0;
+}
+
+@-webkit-keyframes js-passionBackYellow {
+  from {
+    transform: translateX(-30%);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes js-passionBackYellow {
+  from {
+    transform: translateX(-30%);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+.js-passionTitle {
   position: absolute;
   top: 0;
   left: 0;
@@ -205,7 +247,8 @@
   }
 }
 /*下から上に流れるスタイル　背景色イエロー*/
-.js-material, .js-material2 {
+.js-material,
+.js-material2 {
   position: absolute;
   top: 0;
   left: 0;
@@ -216,8 +259,8 @@
   content: "";
   -webkit-animation-name: js-materialBack;
           animation-name: js-materialBack;
-  -webkit-animation-duration: 2s;
-          animation-duration: 2s;
+  -webkit-animation-duration: 0.8s;
+          animation-duration: 0.8s;
   -webkit-animation-fill-mode: forwards;
           animation-fill-mode: forwards;
 }
@@ -467,11 +510,12 @@
 .slideAnimeLeft {
   -webkit-animation-name: slideTextX100;
           animation-name: slideTextX100;
-  -webkit-animation-duration: 0.8s;
-          animation-duration: 0.8s;
+  -webkit-animation-duration: 1.5s;
+          animation-duration: 1.5s;
   -webkit-animation-fill-mode: forwards;
           animation-fill-mode: forwards;
   opacity: 0;
+  transform: translateX(-100%);
 }
 
 @-webkit-keyframes slideTextX100 {
@@ -498,8 +542,8 @@
 .slideAnimeRight {
   -webkit-animation-name: slideTextX-100;
           animation-name: slideTextX-100;
-  -webkit-animation-duration: 0.8s;
-          animation-duration: 0.8s;
+  -webkit-animation-duration: 1.5s;
+          animation-duration: 1.5s;
   -webkit-animation-fill-mode: forwards;
           animation-fill-mode: forwards;
   opacity: 0;
@@ -530,8 +574,8 @@
 .js-fadeIn {
   -webkit-animation-name: fadeInAnime;
           animation-name: fadeInAnime;
-  -webkit-animation-duration: 2s;
-          animation-duration: 2s;
+  -webkit-animation-duration: 3.5s;
+          animation-duration: 3.5s;
   -webkit-animation-fill-mode: forwards;
           animation-fill-mode: forwards;
   opacity: 0;
@@ -565,4 +609,34 @@
 
 .fa-caret-down.js-revolving {
   transform: rotate(180deg);
+}
+
+.js-pageLink {
+  transform: translateX(0);
+}
+
+.js-priceText {
+  transform: translateX(0);
+}
+
+.js-page {
+  opacity: 1;
+}
+
+.js-headerActive {
+  transform: translateY(0);
+}
+
+.p-menu__navMark.js-navBorderAfter::after {
+  top: 0;
+  transform: rotate(-135deg);
+}
+
+.p-menu__navMark.js-navBorderBefore::before {
+  top: 0;
+  transform: rotate(135deg);
+}
+
+.js-navBorderNone {
+  background-color: rgba(255, 255, 255, 0);
 }/*# sourceMappingURL=js.css.map */
