--- a/scss/asset/js.scss
+++ b/scss/asset/js.scss
@@ -1,9 +1,9 @@
 /*　スクロールしたら文字が下から上にスライド表示される */
-._scrollBothSlideUp, ._scrollTextSlideUp, ._scrollSlide  {
+._scrollBothSlideUp, ._scrollTextSlideUp, ._scrollSlide {
     opacity: 0;
     visibility: hidden;
     transition: 1s;
-    transform: translate(0, 1rem);
+    transform: translateY(50%);
 }
 
 ._scrollSlideUp {
@@ -13,7 +13,8 @@
     transform: translate(0, 8rem);
 }
 
-._scrollSlideSaku, ._scrollSlideFuwa {
+._scrollSlideSaku,
+._scrollSlideFuwa {
     opacity: 0;
     visibility: hidden;
     transition: 2s;
@@ -25,21 +26,21 @@
     opacity: 0;
     visibility: hidden;
     transition: 0.8s;
-    transform: translateY(-10%);
+    transform: translateY(-20%);
 }
 
 ._scrollBothSlideDownSec {
     opacity: 0;
     visibility: hidden;
     transition: 2s;
-    transform: translateY(-10%);
+    transform: translateY(-20%);
 }
 
 ._scrollBothSlideDownThr {
     opacity: 0;
     visibility: hidden;
     transition: 4s;
-    transform: translateY(-10%);
+    transform: translateY(-20%);
 }
 
 /*　スクロールイベントが実装されたら付与されるクラス */
@@ -57,6 +58,7 @@
 
 
 /*　リスト　時間差アニメーション */
+// 下から上にスライド
 ._scrollBothListUp {
     opacity: 0;
     visibility: hidden;
@@ -70,32 +72,26 @@
     transform: translateY(0);
 }
 
-
-/*中の要素*/
-.js-slideText {
-    // animation-name:js-textSecond;
-    animation-duration: 0.8s;
-    animation-fill-mode: forwards;
-    color: #fff;
-    -webkit-clip-path: inset(0 100% 0 0);
-    clip-path: inset(0 100% 0 0);
+//左から右にスライド
+._linkSlideLeft {
+    opacity: 0;
+    visibility: hidden;
+    transition: 1s;
+    transform: translateX(-20%);
 }
 
-// @keyframes js-textSecond{
-//     0% {
-//         transform:scaleX(-100%);
-//         opacity: 0;
-//     }
-//     100% {
-//         transform:scaleX(0);
-//         opacity: 1;
-//     }
-// }
+.js-linkSlideLeft {
+    opacity: 1;
+    visibility: visible;
+    transform: translateX(0);
+}
+
+
 
 /*左から右に流れるスタイル　背景色ブラック*/
 .js-price, .js-price2 {
     animation-name: js-priceBack;
-    animation-duration: 1s;
+    animation-duration: 3.5s;
     animation-fill-mode: forwards;
     display: block;
     position: absolute;
@@ -136,12 +132,35 @@
     }
 }
 
-// .js-ScrollSlide {
-//     opacity: 0;
-// }
-
 /*左から右に流れるスタイル　背景色イエロー*/
 .js-passion {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
+    width: 100%;
+    height: 100%;
+    background-color: gold;
+    content: '';
+    animation-name: js-passionBackYellow;
+    animation-fill-mode: forwards;
+    animation-duration: 0.8s;
+    opacity: 0;
+}
+
+@keyframes js-passionBackYellow {
+    from {
+        transform: translateX(-30%);
+        opacity: 0;
+    }
+
+    to {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+.js-passionTitle {
     position: absolute;
     top: 0;
     left: 0;
@@ -187,7 +206,8 @@
 }
 
 /*下から上に流れるスタイル　背景色イエロー*/
-.js-material, .js-material2 {
+.js-material,
+.js-material2 {
     position: absolute;
     top: 0;
     left: 0;
@@ -197,7 +217,7 @@
     background-color: gold;
     content: '';
     animation-name: js-materialBack;
-    animation-duration: 2s;
+    animation-duration: 0.8s;
     animation-fill-mode: forwards;
 }
 
@@ -207,7 +227,7 @@
         height: 49vw;
         padding: 0 8.8vw;
     }
-    
+
     .js-material2 {
         width: 11vw;
         height: 29vw;
@@ -325,6 +345,7 @@
 ._lordSlideImgUpSec.is-active {
     clip-path: inset(0 -20% 0 0);
 }
+
 /*　画面ロード時、左から右に画像表示　*/
 ._lordSlideImgLeft {
     clip-path: inset(0 100% -20% 0);
@@ -380,9 +401,10 @@
 /* passion項目の文字を一文字ずつ表示する */
 .slideAnimeLeft {
     animation-name: slideTextX100;
-    animation-duration: 0.8s;
+    animation-duration: 1.5s;
     animation-fill-mode: forwards;
     opacity: 0;
+    transform: translateX(-100%);
 }
 
 @keyframes slideTextX100 {
@@ -399,7 +421,7 @@
 
 .slideAnimeRight {
     animation-name: slideTextX-100;
-    animation-duration: 0.8s;
+    animation-duration: 1.5s;
     animation-fill-mode: forwards;
     opacity: 0;
 }
@@ -420,7 +442,7 @@
 /* 文字をフェードインさせる */
 .js-fadeIn {
     animation-name: fadeInAnime;
-    animation-duration: 2s;
+    animation-duration: 3.5s;
     animation-fill-mode: forwards;
     opacity: 0;
 }
@@ -435,24 +457,6 @@
     }
 }
 
-// .p-menu__langGroup.item {
-//     animation: diagonal-move-anim 3s linear infinite alternate;
-// }
-
-// @keyframes diagonal-move-anim {
-//     0% {
-//         transform: translate(0, 0);
-//     }
-//     100% {
-//         transform: translate(50px, 50px);
-//     }
-// }
-
-// .p-menu__langGroup.js-active {
-//     opacity: 1;
-//     visibility: visible;
-//     transition: 2s;
-// }
 
 .p-menu__langGroup.js-active {
     display: block;
@@ -463,6 +467,40 @@
     transform: translateY(-204%);
 }
 
+//▼アイコンのアニメーション
 .fa-caret-down.js-revolving {
     transform: rotate(180deg);
+}
+
+//ページ内リンクのアニメーション
+.js-pageLink {
+    transform: translateX(0);
+}
+
+//priceを左から右にスライドさせる
+.js-priceText {
+    transform: translateX(0);
+}
+
+.js-page {
+    opacity: 1;
+}
+
+//
+.js-headerActive {
+    transform: translateY(0);
+}
+
+.p-menu__navMark.js-navBorderAfter::after {
+    top: 0;
+    transform: rotate(-135deg);
+}
+
+.p-menu__navMark.js-navBorderBefore::before {
+    top: 0;
+    transform: rotate(135deg);
+}
+
+.js-navBorderNone {
+    background-color: rgba(255, 255, 255, 0);
 }
